# depthmate

./: CRC0059_wgs_in_scbam.out  Cargo.toml  README.md  fuck  test.out
src/: cli.rs  depth.rs  main.rs  vcf.rs
