[package]
name = "depthmate"
version = "0.1.0"
edition = "2021"
authors = ["Wenjie Wei <wjwei9908@gmail.com>"]

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
itertools = "0.13.0"
noodles = { version = "0.85.0", features = ["vcf"] }
rayon = "1.10.0"
rust-htslib = "0.48.0"
serde = { version = "1.0.215", features = ["derive"] }
smartstring = "1.0.1"
